--- a/qilletni-src/qilletni_info.yml
+++ b/qilletni-src/qilletni_info.yml
@@ -4,6 +4,6 @@ author: Adam Yarris
 provider: is.yarr.qilletni.lib.lastfm.LastFmServiceProvider
 native_bind_factory: is.yarr.qilletni.lib.lastfm.LastFmNativeFunctionBindingFactory
 native_classes:
-  - is.yarr.qilletni.music.lastfm.QilletniLastFm
+  - is.yarr.qilletni.lib.lastfm.LastFmFunctions
 dependencies:
   - postgres:^1.0.0
