Updated docs and maven repo

--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,15 @@ sourceCompatibility = JavaVersion.VERSION_22
 targetCompatibility = JavaVersion.VERSION_22
 
 repositories {
-    mavenLocal()
     mavenCentral()
+
+    maven {
+        url = "https://maven.pkg.github.com/rubbaboy/Qilletni"
+        credentials {
+            username = System.getenv("GITHUB_ACTOR")
+            password = System.getenv("GITHUB_TOKEN")
+        }
+    }
 }
 
 dependencies {
